Create areas for users

--- a/DTS.Web/Areas/User/Views/Shared/_Layout.cshtml
+++ b/DTS.Web/Areas/User/Views/Shared/_Layout.cshtml
@@ -434,12 +434,12 @@
             </a>
             <ul id="documentsmanage-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                 <li>
-                    <a asp-controller="Home"   asp-action="Index">
+                    <a asp-area="User" asp-controller = "Document" asp-action = "Index">
                         <i class="bi bi-circle"></i><span>Documents</span>
                     </a>
                 </li>
                 <li>
-                    <a asp-controller="Home"   asp-action="Index">
+                    <a asp-area="User" asp-controller = "Document" asp-action = "Create">
                         <i class="bi bi-circle"></i><span>Create Document</span>
                     </a>
                 </li>
@@ -498,7 +498,7 @@
                 </ul>
         </li><!-- End Components Nav -->
          <li class="nav-item">
-                     <a class="nav-link " asp-controller="Home"   asp-action="Index">
+                     <a class="nav-link" href="googlexxx.com">
                          <i class="bi bi-box-arrow-in-left
      "></i>
                      <span>Logout</span>
