add datatable on index of documents

--- a/DTS.Web/Areas/User/Views/Shared/_Layout.cshtml
+++ b/DTS.Web/Areas/User/Views/Shared/_Layout.cshtml
@@ -39,7 +39,9 @@
     
     <!-- Checkboxes -->
     <link type="text/css" href="//gyrocode.github.io/jquery-datatables-checkboxes/1.2.12/css/dataTables.checkboxes.css" rel="stylesheet" />
-
+    
+    <!-- Quill Editor -->
+    <link href="https://cdn.jsdelivr.net/npm/quill@2.0.0-rc.4/dist/quill.snow.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
     <link href="~/assets/css/style.css" rel="stylesheet">
@@ -438,11 +440,6 @@
                         <i class="bi bi-circle"></i><span>Documents</span>
                     </a>
                 </li>
-                <li>
-                    <a asp-area="User" asp-controller = "Document" asp-action = "Create">
-                        <i class="bi bi-circle"></i><span>Create Document</span>
-                    </a>
-                </li>
             </ul>
         </li><!-- End Components Nav -->
         
@@ -576,7 +573,8 @@
 <script src='https://cdn.datatables.net/buttons/1.5.2/js/buttons.print.min.js'></script>
 <script src='https://cdn.datatables.net/buttons/1.5.2/js/buttons.colVis.min.js'></script>
 <script type="text/javascript" src="//gyrocode.github.io/jquery-datatables-checkboxes/1.2.12/js/dataTables.checkboxes.min.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/quill@2.0.0-rc.4/dist/quill.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 
 <!-- Template Main JS File -->
 
