--- a/DTS.Web/Areas/User/Views/Document/Create.cshtml
+++ b/DTS.Web/Areas/User/Views/Document/Create.cshtml
@@ -1,54 +1,34 @@
-﻿@{
+﻿@model DocumentVm
+@{
     ViewData["Title"] = "Create Document";
- 
 }
- 
+
 <div class="card">
     <h5 class="card-title" id="tableTitle">@ViewData["card-title"]</h5>
     <div class="card-body">
         <form class="row g-3">
             <div class="col-md-12">
-                <label for="inputName5" class="form-label">Your Name</label>
-                <input type="text" class="form-control" id="inputName5" value = "@ViewData["TrackingCode"]">
+                <label for="inputName5" class="form-label">Tracking Code:  </label>
+                <strong>
+                    @{
+                        @Model.TrackingCode
+                    }
+                </strong>
             </div>
-            <div class="col-md-6">
-                <label for="inputEmail5" class="form-label">Email</label>
+            <div class="col-md-12">
+                <label for="inputEmail5" class="form-label">Title</label>
                 <input type="email" class="form-control" id="inputEmail5">
             </div>
-            <div class="col-md-6">
-                <label for="inputPassword5" class="form-label">Password</label>
-                <input type="password" class="form-control" id="inputPassword5">
+            <div class="col-md-12">
+                <label  class="form-label">Content</label>
+                <textarea    cols="30" rows="10" class="form-control" style="height: 300px !important; ">
+                     </textarea>
             </div>
-            <div class="col-12">
-                <label for="inputAddress5" class="form-label">Address</label>
-                <input type="text" class="form-control" id="inputAddres5s" placeholder="1234 Main St">
-            </div>
-            <div class="col-12">
-                <label for="inputAddress2" class="form-label">Address 2</label>
-                <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-            </div>
-            <div class="col-md-6">
-                <label for="inputCity" class="form-label">City</label>
-                <input type="text" class="form-control" id="inputCity">
-            </div>
-            <div class="col-md-4">
-                <label for="inputState" class="form-label">State</label>
-                <select id="inputState" class="form-select">
-                    <option selected="">Choose...</option>
-                    <option>...</option>
+            <div class="col-md-12">
+                <label for="inputState" class="form-label">Request Type</label>
+                <select id="inputState" class="form-select" asp-items="@Model.RequestTypes">
+                    <option value="">-----------Select Request Type------------</option>
                 </select>
-            </div>
-            <div class="col-md-2">
-                <label for="inputZip" class="form-label">Zip</label>
-                <input type="text" class="form-control" id="inputZip">
-            </div>
-            <div class="col-12">
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="gridCheck">
-                    <label class="form-check-label" for="gridCheck">
-                        Check me out
-                    </label>
-                </div>
             </div>
             <div class="text-center">
                 <button type="submit" class="btn btn-primary">Submit</button>
@@ -59,3 +39,11 @@
 </div>
 
 
+@section Scripts
+{
+    <script type="text/javascript">
+      const quill = new Quill('#editor', {
+        theme: 'snow'
+      });
+    </script>
+    }
