--- a/DTS.Web/Areas/User/Views/Document/Index.cshtml
+++ b/DTS.Web/Areas/User/Views/Document/Index.cshtml
@@ -1,11 +1,76 @@
 ﻿@{
-    ViewData["Title"] = "Document List";
+    ViewData["Title"] = "Documents";
  
 }
-
 <div class="card">
     <h5 class="card-title" id="tableTitle">@ViewData["card-title"]</h5>
     <div class="card-body">
-        <h1>hello world</h1>
+        <div class="row">
+            <div class="col-md-12">
+                <table class="selectionTable table table-striped table-bordered" style="width:100%" id="dataTable">
+                    <thead>
+                    <tr class="bg-dark text-white ps-2">
+                    <th class="ps-3">Id</th>
+                    <th class="ps-3">TrackingCode</th>
+                    <th class="ps-3">Description</th>
+                    <th class="ps-3">Content</th>
+                    <th class="ps-3">Action</th>
+                    </thead>
+                </table>
+            </div>
+        </div>
+        <div class="custom-buttons">
+            <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" >
+                <i class="bi bi-file-earmark-plus"></i>
+                New Document
+            </button>
+            <button class="btn btn-success">
+                <i class="bi bi-arrow-repeat"></i>
+                Refresh
+            </button>
+        </div>
     </div>
 </div>
+
+<!-- Modal for new documents -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" >
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">New Document</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <label for="recipient-name" class="col-form-label">Recipient:</label>
+            <input type="text" class="form-control" id="recipient-name">
+          </div>
+          <div class="form-group">
+            <label for="message-text" class="col-form-label">Message:</label>
+            <textarea class="modalforms form-control" id="message-text"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Send message</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+@section Scripts
+{
+    <script type="text/javascript">
+        loadDataTable(documentColumns)
+         $('.dataTables_filter').prepend($('.custom-buttons'));
+        
+        tinymce.init({
+          selector: '.modalforms',
+          height: 100 // or '50vh' for percentage-based height
+        });
+    </script>
+}
