--- a/DTS.Web/Areas/User/Views/Document/Index.cshtml
+++ b/DTS.Web/Areas/User/Views/Document/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model DocumentVm;
+@{
     ViewData["Title"] = "Documents";
  
 }
@@ -12,7 +13,7 @@
                     <tr class="bg-dark text-white ps-2">
                     <th class="ps-3">Id</th>
                     <th class="ps-3">TrackingCode</th>
-                    <th class="ps-3">Description</th>
+                    <th class="ps-3">Title</th>
                     <th class="ps-3">Content</th>
                     <th class="ps-3">Action</th>
                     </thead>
@@ -43,20 +44,40 @@
         </button>
       </div>
       <div class="modal-body">
-        <form>
-          <div class="form-group">
-            <label for="recipient-name" class="col-form-label">Recipient:</label>
-            <input type="text" class="form-control" id="recipient-name">
-          </div>
-          <div class="form-group">
-            <label for="message-text" class="col-form-label">Message:</label>
-            <textarea class="modalforms form-control" id="message-text"></textarea>
-          </div>
-        </form>
+          <form>
+              <div class="form-group">
+                  <label for="message-text" class="col-form-label">Tracking Code:</label>
+                   <strong id = 'treackingCode'></strong>
+              </div>
+              <div class="form-group">
+                  <label for="message-text" class="col-form-label">Department:</label>
+                  <select id="departmentId" asp-for="@Model.DepartmentId" asp-items="@Model.Departments" class="form-select" style="font-size: 12px !important;">
+                      <option value="">----Select Department----</option>
+                  </select>
+              </div>
+              <div class="form-group">
+                  <label for="recipient-name" class="col-form-label">Title:</label>
+                  <input type="text" class="form-control" id="title">
+              </div>
+              <div class="form-group">
+                  <label for="message-text" class="col-form-label">Content:</label>
+                  <textarea cols="30" rows="2" class="form-control" style="height: 50px;" id = "content"></textarea>
+              </div>
+              <div class="form-group">
+                  <label for="message-text" class="col-form-label">Request Type:</label>
+                  <select asp-for="@Model.RequestTypeId" asp-items="@Model.RequestTypes" class="form-select" style="font-size: 12px !important;" id="requestTypeId">
+                      <option value="">----Select Request Type----</option>
+                  </select>
+              </div>
+              <div class="form-group">
+                  <label for="message-text" class="col-form-label">Remarks:</label>
+                  <textarea cols="30" rows="2" class="form-control" style="height: 50px;" id ="remarks"></textarea>
+              </div>
+          </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Send message</button>
+        <button type="button" class="btn btn-primary" id = 'btnSaveChangesDocument'>Save Changes</button>
       </div>
     </div>
   </div>
@@ -66,11 +87,84 @@
 {
     <script type="text/javascript">
         loadDataTable(documentColumns)
-         $('.dataTables_filter').prepend($('.custom-buttons'));
+        let trackingCode = generateTrackingCode();
+        $('#trackingCode').text(trackingCode)
         
-        tinymce.init({
-          selector: '.modalforms',
-          height: 100 // or '50vh' for percentage-based height
+        $(document).ready(function() {                      
+           $('#btnSaveChangesDocument').click('click', function (e){                   
+                let departmentId = parseInt($('#departmentId').val());
+                 let requestTypeId = parseInt($('#requestTypeId').val());
+                 let title =  $('#title').val();
+                 let content =  $('#content').val();
+                 let remarks =  $('#remarks').val();
+                  
+                 $.ajax({
+                    url: '/user/document/createDocument',
+                    type: 'POST',
+                    dataType: 'json', // Change dataType as needed
+                    data: {
+                        departmentId,
+                        requestTypeId,
+                        title,
+                        content,
+                        remarks,
+                        trackingCode
+                    },
+                    success: function(response) {
+                       function pushNotify() {
+                         new Notify({
+                           status: 'success',
+                           title: 'Notify Title',
+                           text: 'Notify text lorem ipsum',
+                           effect: 'fade',
+                           speed: 300,
+                           customClass: null,
+                           customIcon: null,
+                           showIcon: true,
+                           showCloseButton: true,
+                           autoclose: true,
+                           autotimeout: 3000,
+                           gap: 20,
+                           distance: 20,
+                           type: 'outline',
+                           position: 'right top'
+                         })
+                       }
+                       
+                       pushNotify();
+                    },
+                    error: function(xhr, status, error) {
+                        function pushNotify() {
+                          new Notify({
+                            status: 'success',
+                            title: 'Notify Title',
+                            text: 'Notify text lorem ipsum',
+                            effect: 'fade',
+                            speed: 150,
+                            customClass: null,
+                            customIcon: null,
+                            showIcon: true,
+                            showCloseButton: true,
+                            autoclose: true,
+                            autotimeout: 3000,
+                            gap: 20,
+                            distance: 20,
+                            type: 'outline',
+                            position: 'right top'
+                          })
+                        }
+                        
+                         pushNotify();
+                    }
+                });
+            });
+           
+          
+           
+           
         });
+         
+        $('.custom-buttons').appendTo('.dataTables_wrapper .dataTables_filter:eq(0)');
+             
     </script>
 }
