--- a/DTS.Web/Areas/User/Views/Shared/_Layout.cshtml
+++ b/DTS.Web/Areas/User/Views/Shared/_Layout.cshtml
@@ -43,16 +43,14 @@
     <!-- Quill Editor -->
     <link href="https://cdn.jsdelivr.net/npm/quill@2.0.0-rc.4/dist/quill.snow.css" rel="stylesheet">
 
+    <!-- Toaster -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-notify@1.0.4/dist/simple-notify.css" />
+    
     <!-- Template Main CSS File -->
     <link href="~/assets/css/style.css" rel="stylesheet">
 
-    <!-- =======================================================
-    * Template Name: NiceAdmin
-    * Updated: Mar 09 2023 with Bootstrap v5.2.3
-    * Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-    * Author: BootstrapMade.com
-    * License: https://bootstrapmade.com/license/
-    ======================================================== -->
+    
+
 </head>
 
 <body>
@@ -449,17 +447,17 @@
             </a>
             <ul id="students-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                 <li>
-                    <a asp-controller="Home"   asp-action="Index">
+                    <a  >
                         <i class="bi bi-circle"></i><span>Incoming</span>
                     </a>
                 </li>
                 <li>
-                    <a asp-controller="Home"   asp-action="Index">
+                    <a >
                         <i class="bi bi-circle"></i><span>Outgoing</span>
                     </a>
                 </li>
                 <li>
-                    <a asp-controller="Home"   asp-action="Index">
+                    <a  >
                         <i class="bi bi-circle"></i><span>Hold</span>
                     </a>
                 </li>
@@ -575,8 +573,10 @@
 <script type="text/javascript" src="//gyrocode.github.io/jquery-datatables-checkboxes/1.2.12/js/dataTables.checkboxes.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/quill@2.0.0-rc.4/dist/quill.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/simple-notify@1.0.4/dist/simple-notify.min.js"></script>
+ 
 
-<!-- Template Main JS File -->
+<!-- main JS -->
 
 <script src="~/assets/js/main.js"></script>
 <script src="~/js/app.js"></script>
