--- a/DTS.Web/Areas/User/Views/Document/Index.cshtml
+++ b/DTS.Web/Areas/User/Views/Document/Index.cshtml
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="custom-buttons">
-            <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" >
+            <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" id = "btnNewDocument">
                 <i class="bi bi-file-earmark-plus"></i>
                 New Document
             </button>
@@ -45,29 +45,31 @@
       </div>
       <div class="modal-body">
           <form>
-              <div class="form-group">
-                  <label for="message-text" class="col-form-label">Tracking Code:</label>
-                   <strong id = 'treackingCode'></strong>
-              </div>
+              <label for="message-text" class="col-form-label">Tracking Code:</label>
+              <strong id = 'trackingCode'></strong>
               <div class="form-group">
                   <label for="message-text" class="col-form-label">Department:</label>
                   <select id="departmentId" asp-for="@Model.DepartmentId" asp-items="@Model.Departments" class="form-select" style="font-size: 12px !important;">
                       <option value="">----Select Department----</option>
                   </select>
+                  <p class="errorFieldText" id = 'errorFieldDepartmentId' data-errorfield = "departmentId"></p>
               </div>
               <div class="form-group">
                   <label for="recipient-name" class="col-form-label">Title:</label>
-                  <input type="text" class="form-control" id="title">
+                  <input type="text" class="form-control" id="title" >
+                  <p class="errorFieldText" id = 'errorFieldTitle' data-errorfield = "title"></p>
               </div>
               <div class="form-group">
                   <label for="message-text" class="col-form-label">Content:</label>
-                  <textarea cols="30" rows="2" class="form-control" style="height: 50px;" id = "content"></textarea>
+                  <textarea cols="30" rows="2" class="form-control" style="height: 50px;" id = "content"  ></textarea>
+                   <p class="errorFieldText" id = 'errorFieldContent' data-errorfield = "content"></p>
               </div>
               <div class="form-group">
                   <label for="message-text" class="col-form-label">Request Type:</label>
-                  <select asp-for="@Model.RequestTypeId" asp-items="@Model.RequestTypes" class="form-select" style="font-size: 12px !important;" id="requestTypeId">
+                  <select asp-for="@Model.RequestTypeId" asp-items="@Model.RequestTypes" class="form-select" style="font-size: 12px !important;" id="requestTypeId" >
                       <option value="">----Select Request Type----</option>
                   </select>
+                    <p class="errorFieldText" id = 'errorFieldRequestTypeId' data-errorfield = "requestTypeId"></p>
               </div>
               <div class="form-group">
                   <label for="message-text" class="col-form-label">Remarks:</label>
@@ -76,7 +78,7 @@
           </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" id = "closeModal">Close</button>
         <button type="button" class="btn btn-primary" id = 'btnSaveChangesDocument'>Save Changes</button>
       </div>
     </div>
@@ -87,81 +89,84 @@
 {
     <script type="text/javascript">
         loadDataTable(documentColumns)
-        let trackingCode = generateTrackingCode();
-        $('#trackingCode').text(trackingCode)
-        
-        $(document).ready(function() {                      
-           $('#btnSaveChangesDocument').click('click', function (e){                   
+        let errors = []
+        let trackingCode = "";
+          
+         $('#btnNewDocument').click(function() {                
+              trackingCode = generateTrackingCode();
+              $('#trackingCode').text(trackingCode);      
+              $('#trackingCode').css({'font-family': '-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif', 'font-size': '14px'});                   
+         });
+         
+        $('.errorFieldText').css({'color': '#a83240', 'font-size': '10px'})               
+       
+        $(document).ready(function() {   
+            
+        function displayValidationError(errorField, errorMessage){     
+            if (validateValueIfNullOrUndefined(errorMessage)){
+              $(errorField).text(errorMessage)
+              errors.push(errorMessage)
+            }          
+        }
+            
+        $('#btnSaveChangesDocument').on('click', function (e){                   
                 let departmentId = parseInt($('#departmentId').val());
                  let requestTypeId = parseInt($('#requestTypeId').val());
                  let title =  $('#title').val();
                  let content =  $('#content').val();
                  let remarks =  $('#remarks').val();
                   
-                 $.ajax({
-                    url: '/user/document/createDocument',
-                    type: 'POST',
-                    dataType: 'json', // Change dataType as needed
-                    data: {
-                        departmentId,
-                        requestTypeId,
-                        title,
-                        content,
-                        remarks,
-                        trackingCode
-                    },
-                    success: function(response) {
-                       function pushNotify() {
-                         new Notify({
-                           status: 'success',
-                           title: 'Notify Title',
-                           text: 'Notify text lorem ipsum',
-                           effect: 'fade',
-                           speed: 300,
-                           customClass: null,
-                           customIcon: null,
-                           showIcon: true,
-                           showCloseButton: true,
-                           autoclose: true,
-                           autotimeout: 3000,
-                           gap: 20,
-                           distance: 20,
-                           type: 'outline',
-                           position: 'right top'
-                         })
-                       }
-                       
-                       pushNotify();
-                    },
-                    error: function(xhr, status, error) {
-                        function pushNotify() {
-                          new Notify({
-                            status: 'success',
-                            title: 'Notify Title',
-                            text: 'Notify text lorem ipsum',
-                            effect: 'fade',
-                            speed: 150,
-                            customClass: null,
-                            customIcon: null,
-                            showIcon: true,
-                            showCloseButton: true,
-                            autoclose: true,
-                            autotimeout: 3000,
-                            gap: 20,
-                            distance: 20,
-                            type: 'outline',
-                            position: 'right top'
-                          })
-                        }
-                        
-                         pushNotify();
-                    }
-                });
-            });
-           
-          
-           
-           
+                 let validateTitle = validateInput('Title', title, 2, 50);
+                 let validateContent = validateInput('Content', content, 2, 400);
+                 let validateDepartment = validateSelect('Department', departmentId);
+                 let validateRequestTypeid = validateSelect('Request Type', requestTypeId);
+                 
+                 $('.errorFieldText').text('')
+                 
+                 displayValidationError('#errorFieldTitle', validateTitle)
+                 displayValidationError('#errorFieldContent', validateContent)
+                 displayValidationError('#errorFieldDepartmentId', validateDepartment)
+                 displayValidationError('#errorFieldRequestTypeId', validateRequestTypeid)
+                 console.log(errors)
+                   
+                 if (errors.length < 1){
+                     console.log('insert data')
+                     $.ajax({
+                          url: '/user/document/createDocument',
+                          type: 'POST',
+                          contentType: 'application/json', 
+                          data: JSON.stringify({
+                              departmentId,
+                              requestTypeId,
+                              title,
+                              content,
+                              remarks,
+                              trackingCode
+                          }),
+                          success: function(response) {                                  
+                             $('#title').val('');
+                             $('#content').val('');
+                             $('#remarks').val('');
+                             $('#departmentId').prop('selectedIndex', 0);
+                             $('#requestTypeId').prop('selectedIndex', 0);
+                             
+                             $('#closeModal').click();
+                             console.log('response', response)
+                              
+                             pushNotify('New Document', 'Successfully created document', 'success');                               
+                          },
+                          error: function(xhr, status, error) {      
+                              console.log('ERROR', xhr)
+                              pushNotify('New Document', 'Failed to create document', 'error');
+                              
+                          }
+                      });
+                 }else{
+                     
+                 }                  
+                 errors = [];
+            });        
+        
         });
          
         $('.custom-buttons').appendTo('.dataTables_wrapper .dataTables_filter:eq(0)');
