--- a/DTS.Web/wwwroot/assets/css/style.css
+++ b/DTS.Web/wwwroot/assets/css/style.css
@@ -1493,9 +1493,7 @@ div.dataTables_wrapper div.dataTables_filter {
 .dataTables_filter {
   width: auto !important;
 }
-
-
-
+ 
 .custom-buttons button{
   font-size: 12px !important;
 }
@@ -1526,6 +1524,16 @@ textarea{
    position: absolute;
   right: 0;
   top: 70px;
+}
+
+.errorFieldText{
+  font-size: 10px !important;
+  color: #a83240 !important;
+}
+
+#trackingCode{
+  font-size: 14px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
   
