--- a/DTS.Web/wwwroot/assets/css/style.css
+++ b/DTS.Web/wwwroot/assets/css/style.css
@@ -613,6 +613,8 @@ h6 {
   background-color: #fff;
 }
 
+ 
+
 @media (max-width: 1199px) {
   .sidebar {
     left: -300px;
@@ -1535,5 +1537,10 @@ textarea{
   font-size: 14px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
-
-  
+ 
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 50px !important;  
+}  
